--- a/AboutGeorgia/kitchen-page.html
+++ b/AboutGeorgia/kitchen-page.html
@@ -171,80 +171,156 @@
 
         </div>
 
-
         <main>
+            <div class="row">
+                <div class="col-lg-2 col-md-12">
+                    <aside>
+                        <div class="row">
+                            <div class="hidden-aside">
+                                <div class="row">
 
-            <section>
-                <div class="row">
-                    <div class="col-xl col-lg-4 col-md-6">
-                        <article>
-                            <div class="image-container"><a href="kerzi-konkretulad.html"><img
-                                        src="./assets/img/food/ბორანო.PNG" alt=""></a></div>
-                            <h3><a href="#">ბორანო</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>აჭარა</p>
-                        </article>
-                    </div>
+                                    <div class="col-12">
+                                        <h3>კატეგორიები</h3>
+                                    </div>
+                                    <div class="col-md-3 col-sm-12">
+                                        <button type="button" class="btn btn-danger"><a href="#"><i
+                                                    class="fas fa-church categories-icons"></i>ეკლესია-მონასტერები</a></button>
+                                    </div>
+                                    <div class="col-md-3 col-sm-12">
+                                        <button type="button" class="btn btn-danger"><a href="#"><i
+                                                    class="fas fa-sun categories-icons"></i>ზღვის
+                                                კურორტები</a></button>
+                                    </div>
+                                    <div class="col-md-3 col-sm-12">
+                                        <button type="button" class="btn btn-danger"><a href="#"><i
+                                                    class="fas fa-mountain categories-icons"></i>მთის
+                                                კურორტები</a></button>
 
-                    <div class="col-xl col-lg-4 col-md-6">
-                        <article>
-                            <div class="image-container"><img src="./assets/img/food/xinkali2.jpg" alt=""></div>
-                        </article>
-                    </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-12">
 
-                    <div class="col-xl col-lg-4 col-md-6">
-                        <article>
-                            <div class="image-container"><img src="./assets/img/food/acharuli.png" alt=""></div>
-                        </article>
-                    </div>
-                    <div class="col-xl col-lg-4 col-md-6">
-                        <article>
-                            <div class="image-container"><img src="./assets/img/food/lobiojpg.jpg" alt=""></div>
-                        </article>
-                    </div>
+                                        <button type="button" class="btn btn-danger "><a href="#"><i
+                                                    class="fas fa-paw categories-icons"></i>ნაკრძალები</a></button>
 
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img src="./assets/img/food/chakafuli.jpg"
-                                        alt=""></a></div>
-                            <h3><a href="#">ჩაქაფული</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>კახეთი</p>
-                        </article>
-                    </div>
-
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img src="./assets/img/food/sacivi.jpg" alt=""></a>
+                                    </div>
+                                </div>
                             </div>
-                            <h3><a href="#">საცივი</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>იმერეთი</p>
-                        </article>
-                    </div>
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img
-                                        src="./assets/img/food/nigvziani badrijani.jpg" alt=""></a></div>
-                            <h3><a href="#">ლობიანი</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>იმერეთი</p>
-                        </article>
-                    </div>
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img src="./assets/img/food/kubdari.jpg"
-                                        alt=""></a></div>
-                            <h3><a href="#">კუბდარი</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>სვანეთი</p>
-                        </article>
-                    </div>
+
+                            <div class="area">
+                                <nav class="main-menu">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><i class="fas fa-church fa-2x fa"></i>
+                                                <span class="nav-text">ეკლესია-მონასტერები</span></a></li>
+
+                                        <li><a href="#"><i class="fas fa-sun fa-2x fa "></i>
+                                                <span class="nav-text">ზღვის კურორტები</span></a></li>
+
+                                        <li><a href="#"><i class="fas fa-mountain fa-2x fa"></i>
+                                                <span class="nav-text">მთის კურორტები</span></a></li>
+
+                                        <li><a href="#"><i class="fas fa-paw fa-2x fa"></i>
+                                                <span class="nav-text">ნაკრძალები</span></a></li>
+
+
+                                    </ul>
+
+                                </nav>
+                            </div>
+
+                        </div>
+
+
+
+
+
+                    </aside>
                 </div>
-            </section>
+
+                <div class="col-lg-10 col-md-12">
+
+                    <section>
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <article>
+                                    <div class="image-container"><a href="kerzi-konkretulad.html"><img
+                                                src="./assets/img/food/ბორანო.PNG" alt=""></a>
+                                    </div>
+                                    <div class="title-text">
+                                        <h3><a href="#">ბორანო</a></h3>
+                                        <i class="fas fa-map-marker-alt"></i>
+                                        <p>აჭარა</p>
+                                    </div>
+                                </article>
+                            </div>
+
+                            <div class="col-lg-4 col-md-6">
+                                <article>
+                                    <div class="image-container"><img src="./assets/img/food/chakafuli.jpg" alt="">
+                                    </div>
+                                    <h3><a href="#"></a></h3>
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <p></p>
+                                </article>
+                            </div>
+
+                            <div class="col-lg-4 col-md-6">
+                                <article>
+                                    <div class="image-container"><img src="./assets/img/food/acharuli.png" alt="">
+                                    </div>
+                                </article>
+                            </div>
+
+
+                            <div class="col-lg-4 col-md-6">
+                                <article>
+                                    <div class="image-container"><a href="#"><img src="./assets/img/food/xinkali2.jpg"
+                                                alt=""></a></div>
+                                    <h3><a href="#"></a></h3>
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <p></p>
+                                </article>
+                            </div>
+
+                            <div class="col-lg-4 col-md-6">
+                                <article>
+                                    <div class="image-container"><a href="#"><img
+                                                src="./assets/img/food/nigvziani badrijani.jpg" alt=""></a>
+                                    </div>
+                                    <h3><a href="#"></a></h3>
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <p></p>
+                                </article>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <article>
+                                    <div class="image-container"><a href="#"><img src="./assets/img/food/sacivi.jpg"
+                                                alt=""></a></div>
+                                    <h3><a href="#"></a></h3>
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <p></p>
+                                </article>
+                            </div>
+                            <div class="col-lg-4 col-md-6">
+                                <article>
+                                    <div class="image-container"><a href="#"><img src="./assets/img/food/lobiojpg.jpg"
+                                                alt=""></a></div>
+                                    <h3><a href="#">რაბათი</a></h3>
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <p>სამცხე-ჯავახეთი</p>
+                                </article>
+                            </div>
+                        </div> -->
+                </div>
+                </section>
+            </div>
 
             <div class="clear-box"></div>
         </main>
+
+
+
+
 
 
 
