--- a/AboutGeorgia/sights-page.html
+++ b/AboutGeorgia/sights-page.html
@@ -174,7 +174,7 @@
 
         <main>
             <div class="row">
-                <div class="col-lg-1 col-md-12">
+                <div class="col-lg-2 col-md-12">
                     <aside>
                         <div class="row">
                             <div class="hidden-aside">
@@ -238,7 +238,7 @@
                     </aside>
                 </div>
 
-                <div class="col-lg-11 col-md-12">
+                <div class="col-lg-10 col-md-12">
 
                     <section>
                         <div class="row">
@@ -312,7 +312,7 @@
                                     <p>სამცხე-ჯავახეთი</p>
                                 </article>
                             </div>
-                        </div> -->
+                        </div>
                 </div>
                 </section>
             </div>
