--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -29,82 +29,91 @@
 
             <div id="header-bottom" class="header-bottom">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-11 col-md-10 col-9">
-                            <nav class="navbar navbar-expand-lg navbar-light">
-                                <!--bg-light wavshale -->
-                                <a class="navbar-brand" href="index.html"><img src="./assets/img/global/logo.png"></a>
-                                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                    aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="sr-only">Toggle navigation</span>
-                                    <span class="icon-bar2"></span>
-                                    <span class="icon-bar2"></span>
-                                    <span class="icon-bar2"></span>
-                                    <span class="icon-bar2"></span>
 
-                                </button>
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <!--bg-light wavshale -->
+                        <a class="navbar-brand" href="index.html"><img src="./assets/img/global/logo.png"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar2"></span>
+                            <span class="icon-bar2"></span>
+                            <span class="icon-bar2"></span>
+                            <span class="icon-bar2"></span>
 
-                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav mr-auto">
-                                        <li class="nav-item active">
-                                            <div class="nav-link"> <a href="index.html">მთავარი <span
-                                                        class="sr-only">(current)</span></a></div>
-                                        </li>
-                                        <li class="nav-item">
-                                            <div class="nav-link"> <a href="kitchen-page.html">სამზარეულო</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <div class="nav-link"> <a href="sights-page.html">ღირსშესანიშნაობები</a>
-                                            </div>
-                                        </li>
+                        </button>
 
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item active">
+                                    <div class="nav-link"> <a href="index.html">მთავარი
+                                            <span class="sr-only">(current)</span></a>esaaa
+                                    </div>
+                                </li>
+                                <li class="nav-item ">
+                                    <div class="nav-link"> <a href="kitchen-page.html">სამზარეულო</a></div>
+                                    <ul class="ra">
+                                        <li><a href="#">ცივი კერძები</a></li>
+                                        <li><a href="#">ცხელი კერძები</a></li>
+                                        <li><a href="#">ქართული ღვინო</a></li>
                                     </ul>
-                                    <form class="form-inline my-2 my-lg-0">
-                                        <input class="form-control mr-sm-2" type="search" placeholder="Search"
-                                            aria-label="Search">
-                                        <button class="btn btn-outline-success my-2 my-sm-0"
-                                            type="submit">Search</button>
-                                    </form>
-                                </div>
-                            </nav>
+
+                                </li>
+                                <li class="nav-item">
+                                    <div class="nav-link"> <a href="sights-page.html">ღირსშესანიშნაობები</a>
+                                    </div>
+                                    <ul class="ra">
+                                        <li><a href="#">ეკლესია-მონასტრები</a></li>
+                                        <li><a href="#">ზღვის კურორტები</a></li>
+                                        <li><a href="#">მთის კურორტები</a></li>
+                                        <li><a href="#">ნაკრძალები</a></li>
+                                    </ul>
                         </div>
+                        </li>
+
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                </div>
+                </nav>
+            </div>
 
 
-                        <div class="col-lg-1 col-md-2 col-xs-3 col-3">
-                            <div class="language"></div>
-                        </div>
 
-                    </div>
+
+    </div>
+    </div>
+    </div>
+    <div class="clear-box"></div>
+    </header>
+
+    <div class="slider">
+        <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="8000">
+                    <img src="./assets/img/carousel/header/signagi.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item" data-interval="8000">
+                    <img src="./assets/img/carousel/header/svaneti.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item" data-interval="8000">
+                    <img src="./assets/img/carousel/header/gvino.jpg" class="d-block w-100">
                 </div>
             </div>
-            <div class="clear-box"></div>
-        </header>
-
-        <div class="slider">
-            <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-interval="8000">
-                        <img src="./assets/img/carousel/header/signagi.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item" data-interval="8000">
-                        <img src="./assets/img/carousel/header/svaneti.jpg" class="d-block w-100">
-                    </div>
-                    <div class="carousel-item" data-interval="8000">
-                        <img src="./assets/img/carousel/header/gvino.jpg" class="d-block w-100">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="clear-box"></div>
+    </div>
+    <div class="clear-box"></div>
     </div>
     <main class="container-fluid">
         <div class="video">
@@ -212,14 +221,7 @@
                     </div>
 
                 </div>
-                <!-- ><a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>-->
+
             </div>
             <div class="clear-box"></div>
         </section>
@@ -520,6 +522,7 @@
             AboutGergia.Init();
         });
         $('.dropdown-toggle').dropdown();
+
     </script>
 </body>
 
