--- a/AboutGeorgia/kitchen-page.html
+++ b/AboutGeorgia/kitchen-page.html
@@ -182,27 +182,24 @@
                                     <div class="col-12">
                                         <h3>კატეგორიები</h3>
                                     </div>
-                                    <div class="col-md-3 col-sm-12">
-                                        <button type="button" class="btn btn-danger"><a href="#"><i
-                                                    class="fas fa-church categories-icons"></i>ეკლესია-მონასტერები</a></button>
+                                    <div class="col-md-4 col-sm-12">
+                                        <button type="button" class="btn btn-danger"><a href="#">
+                                                <i class="fas fa-utensils categories-icons"></i>ცივი
+                                                კერძები</a></button>
                                     </div>
-                                    <div class="col-md-3 col-sm-12">
+                                    <div class="col-md-4 col-sm-12">
                                         <button type="button" class="btn btn-danger"><a href="#"><i
-                                                    class="fas fa-sun categories-icons"></i>ზღვის
-                                                კურორტები</a></button>
+                                                    class="fas fa-concierge-bell categories-icons"></i>ცხელი კერძები
+                                            </a></button>
                                     </div>
-                                    <div class="col-md-3 col-sm-12">
+                                    <div class="col-md-4 col-sm-12">
                                         <button type="button" class="btn btn-danger"><a href="#"><i
-                                                    class="fas fa-mountain categories-icons"></i>მთის
-                                                კურორტები</a></button>
+                                                    class="fas fa-glass-cheers categories-icons"></i>ქართული ღვინო
+                                            </a></button>
+
 
                                     </div>
-                                    <div class="col-md-3 col-sm-12">
 
-                                        <button type="button" class="btn btn-danger "><a href="#"><i
-                                                    class="fas fa-paw categories-icons"></i>ნაკრძალები</a></button>
-
-                                    </div>
                                 </div>
                             </div>
 
@@ -210,17 +207,17 @@
                                 <nav class="main-menu">
                                     <ul>
                                         <li>
-                                            <a href="#"><i class="fas fa-church fa-2x fa"></i>
-                                                <span class="nav-text">ეკლესია-მონასტერები</span></a></li>
+                                            <a href="#"><i class="fas fa-utensils fa-2x fa"></i>
 
-                                        <li><a href="#"><i class="fas fa-sun fa-2x fa "></i>
-                                                <span class="nav-text">ზღვის კურორტები</span></a></li>
+                                                <span class="nav-text">ცივი კერძები</span></a></li>
 
-                                        <li><a href="#"><i class="fas fa-mountain fa-2x fa"></i>
-                                                <span class="nav-text">მთის კურორტები</span></a></li>
+                                        <li><a href="#"><i class="fas fa-concierge-bell fa-2x fa "></i>
+                                                <span class="nav-text">ცხელი კერძები</span></a></li>
 
-                                        <li><a href="#"><i class="fas fa-paw fa-2x fa"></i>
-                                                <span class="nav-text">ნაკრძალები</span></a></li>
+
+                                        <li><a href="#"><i class="fas fa-glass-cheers fa-2x fa"></i>
+                                                <span class="nav-text">ქართული ღვინო</span></a></li>
+
 
 
                                     </ul>
