--- a/AboutGeorgia/sights-page.html
+++ b/AboutGeorgia/sights-page.html
@@ -187,9 +187,10 @@
                                         <button type="button" class="btn btn-danger"><a href="#"><i
                                                     class="fas fa-church categories-icons"></i>ეკლესია-მონასტერები</a></button>
                                     </div>
+
                                     <div class="col-md-3 col-sm-12">
                                         <button type="button" class="btn btn-danger"><a href="#"><i
-                                                    class="fas fa-sun categories-icons"></i>ზღვის
+                                                    class="fas fa-umbrella-beach categories-icons"></i>ზღვის
                                                 კურორტები</a></button>
                                     </div>
                                     <div class="col-md-3 col-sm-12">
@@ -214,7 +215,7 @@
                                             <a href="#"><i class="fas fa-church fa-2x fa"></i>
                                                 <span class="nav-text">ეკლესია-მონასტერები</span></a></li>
 
-                                        <li><a href="#"><i class="fas fa-sun fa-2x fa "></i>
+                                        <li><a href="#"><i class="fas fa-umbrella-beach fa-2x fa "></i>
                                                 <span class="nav-text">ზღვის კურორტები</span></a></li>
 
                                         <li><a href="#"><i class="fas fa-mountain fa-2x fa"></i>
