--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -53,22 +53,26 @@
                                 </li>
                                 <li class="nav-item ">
                                     <div class="nav-link"> <a href="kitchen-page.html">სამზარეულო</a></div>
-                                    <ul class="ra">
-                                        <li><a href="#">ცივი კერძები</a></li>
-                                        <li><a href="#">ცხელი კერძები</a></li>
-                                        <li><a href="#">ქართული ღვინო</a></li>
-                                    </ul>
+                                    <div class="ra">
+                                        <ul>
+                                            <li><a href="#">ცივი კერძები</a></li>
+                                            <li><a href="#">ცხელი კერძები</a></li>
+                                            <li><a href="#">ქართული ღვინო</a></li>
+                                        </ul>
+                                    </div>
 
                                 </li>
                                 <li class="nav-item">
                                     <div class="nav-link"> <a href="sights-page.html">ღირსშესანიშნაობები</a>
                                     </div>
-                                    <ul class="ra">
-                                        <li><a href="#">ეკლესია-მონასტრები</a></li>
-                                        <li><a href="#">ზღვის კურორტები</a></li>
-                                        <li><a href="#">მთის კურორტები</a></li>
-                                        <li><a href="#">ნაკრძალები</a></li>
-                                    </ul>
+                                    <div class="ra">
+                                        <ul>
+                                            <li><a href="#">ეკლესია-მონასტრები</a></li>
+                                            <li><a href="#">ზღვის კურორტები</a></li>
+                                            <li><a href="#">მთის კურორტები</a></li>
+                                            <li><a href="#">ნაკრძალები</a></li>
+                                        </ul>
+                                    </div>
                         </div>
                         </li>
 
