--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -29,9 +29,7 @@
 
             <div id="header-bottom" class="header-bottom">
                 <div class="container">
-
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <!--bg-light wavshale -->
                         <a class="navbar-brand" href="index.html"><img src="./assets/img/global/logo.png"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -44,51 +42,33 @@
 
                         </button>
 
+
+
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
-                                <li class="nav-item active">
-                                    <div class="nav-link"> <a href="index.html">მთავარი
-                                            <span class="sr-only">(current)</span></a>esaaa
-                                    </div>
-                                </li>
-                                <li class="nav-item ">
-                                    <div class="nav-link"> <a href="kitchen-page.html">სამზარეულო</a></div>
-                                    <div class="ra">
-                                        <ul>
-                                            <li><a href="#">ცივი კერძები</a></li>
-                                            <li><a href="#">ცხელი კერძები</a></li>
-                                            <li><a href="#">ქართული ღვინო</a></li>
-                                        </ul>
-                                    </div>
 
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">მთავარი</a>
                                 </li>
                                 <li class="nav-item">
-                                    <div class="nav-link"> <a href="sights-page.html">ღირსშესანიშნაობები</a>
-                                    </div>
-                                    <div class="ra">
-                                        <ul>
-                                            <li><a href="#">ეკლესია-მონასტრები</a></li>
-                                            <li><a href="#">ზღვის კურორტები</a></li>
-                                            <li><a href="#">მთის კურორტები</a></li>
-                                            <li><a href="#">ნაკრძალები</a></li>
-                                        </ul>
-                                    </div>
+                                    <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="sights-page.html">ღირსშესანიშნაობები</a>
+                                </li>
+                            </ul>
+                            <form class="form-inline my-2 my-lg-0">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search"
+                                    aria-label="Search">
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
                         </div>
-                        </li>
+                    </nav>
 
-                        </ul>
-                        <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                        </form>
                 </div>
-                </nav>
+
             </div>
-
-
-
-
-    </div>
     </div>
     </div>
     <div class="clear-box"></div>
