--- a/AboutGeorgia/kitchen-page.html
+++ b/AboutGeorgia/kitchen-page.html
@@ -29,37 +29,33 @@
 
             <div id="header-bottom" class="header-bottom">
                 <div class="container">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="#">Navbar</a>
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="index.html"><img src="./assets/img/global/logo.png"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar2"></span>
+                            <span class="icon-bar2"></span>
+                            <span class="icon-bar2"></span>
+                            <span class="icon-bar2"></span>
+
                         </button>
+
+
 
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html">მთავარი</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Dropdown
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                    </div>
-                                </li>
+
                                 <li class="nav-item">
-                                    <a class="nav-link disabled" href="#" tabindex="-1"
-                                        aria-disabled="true">Disabled</a>
+                                    <a class="nav-link" href="sights-page.html">ღირსშესანიშნაობები</a>
                                 </li>
                             </ul>
                             <form class="form-inline my-2 my-lg-0">
