--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -51,11 +51,45 @@
                                     <a class="nav-link" href="#">მთავარი</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
+
+                                    <div class="btn-group">
+                                        <button class="btn header-btn-new" type="button">
+                                            <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
+                                        </button>
+                                        <button type="button"
+                                            class="btn btn-sm btn-secondary dropdown-toggle dropdown-toggle-split"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <span class="sr-only">Toggle Dropdown</span>
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="kitchen-page.html">ცივი კერძები</a>
+                                            <a class="dropdown-item" href="kitchen-page.html">ცხელი კერძები</a>
+                                            <a class="dropdown-item" href="kitchen-page.html">სასმელები</a>
+                                        </div>
+                                    </div>
+
+
+
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="sights-page.html">ღირსშესანიშნაობები</a>
+
+                                    <div class="btn-group">
+                                        <button class="btn header-btn-new" type="button">
+                                            <a class="nav-link" href="sights-page.html">ღირსშესანიშნაობები</a>
+                                        </button>
+                                        <button type="button"
+                                            class="btn btn-sm  btn-secondary dropdown-toggle dropdown-toggle-split"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <span class="sr-only">Toggle Dropdown</span>
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="sights-page.html">ეკლესია-მონასტრები</a>
+                                            <a class="dropdown-item" href="sights-page.html">მთის კურორტები</a>
+                                            <a class=" dropdown-item" href="sights-page.html">ზღვის კურორტები</a>
+                                            <a class="dropdown-item" href="sights-page.html">ნაკრძალები</a>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                             <form class="form-inline my-2 my-lg-0">
@@ -394,7 +428,7 @@
                     <a href="#">
                         <img src="./assets/img/food/gvino.jpg" alt="gvino">
                         <div class="menu-items-text">
-                            <p>ქართული ღვინო</p>
+                            <p>სასმელები</p>
                         </div>
                     </a>
 
