--- a/AboutGeorgia/kitchen-page.html
+++ b/AboutGeorgia/kitchen-page.html
@@ -190,7 +190,7 @@
                                     </div>
                                     <div class="col-md-4 col-sm-12">
                                         <button type="button" class="btn btn-danger"><a href="#"><i
-                                                    class="fas fa-glass-cheers categories-icons"></i>ქართული ღვინო
+                                                    class="fas fa-glass-cheers categories-icons"></i>სასმელები
                                             </a></button>
 
 
@@ -212,7 +212,7 @@
 
 
                                         <li><a href="#"><i class="fas fa-glass-cheers fa-2x fa"></i>
-                                                <span class="nav-text">ქართული ღვინო</span></a></li>
+                                                <span class="nav-text">სასმელები</span></a></li>
 
 
 
@@ -277,8 +277,8 @@
 
                             <div class="col-lg-4 col-md-6">
                                 <article>
-                                    <div class="image-container"><a href="#"><img
-                                                src="./assets/img/food/nigvziani badrijani.jpg" alt=""></a>
+                                    <div class="image-container"><a href="#"><img src="./assets/img/food/xvanchkara.png"
+                                                alt=""></a>
                                     </div>
                                     <h3><a href="#"></a></h3>
                                     <i class="fas fa-map-marker-alt"></i>
@@ -298,12 +298,12 @@
                                 <article>
                                     <div class="image-container"><a href="#"><img src="./assets/img/food/lobiojpg.jpg"
                                                 alt=""></a></div>
-                                    <h3><a href="#">რაბათი</a></h3>
+                                    <h3><a href="#"></a></h3>
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <p>სამცხე-ჯავახეთი</p>
+                                    <p></p>
                                 </article>
                             </div>
-                        </div> -->
+                        </div>
                 </div>
                 </section>
             </div>
