--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -139,10 +139,17 @@
                 <div class="row">
                     <div class="col-xl-6">
                         <div class="clip">
-                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/4avJ2JBD8PM"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <div class="video-container">
+                                <iframe class="transition-image" width="100%" height="315"
+                                    src="https://www.youtube.com/embed/4avJ2JBD8PM" frameborder="0"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                                <img src="./assets/img/global/georgia.jpg" alt="">
+                                <!-- <div class="video-icon">
+                                    <i class="far fa-play-circle"></i>
+                                </div> -->
+
+                            </div>
                         </div>
 
                     </div>
