--- a/AboutGeorgia/sights-page.html
+++ b/AboutGeorgia/sights-page.html
@@ -51,11 +51,45 @@
                                     <a class="nav-link" href="index.html">მთავარი</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
+
+                                    <div class="btn-group">
+                                        <button class="btn header-btn-new" type="button">
+                                            <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
+                                        </button>
+                                        <button type="button"
+                                            class="btn btn-sm btn-secondary dropdown-toggle dropdown-toggle-split"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <span class="sr-only">Toggle Dropdown</span>
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="kitchen-page.html">ცივი კერძები</a>
+                                            <a class="dropdown-item" href="kitchen-page.html">ცხელი კერძები</a>
+                                            <a class="dropdown-item" href="kitchen-page.html">სასმელები</a>
+                                        </div>
+                                    </div>
+
+
+
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="sights-page.html">ღირსშესანიშნაობები</a>
+
+                                    <div class="btn-group">
+                                        <button class="btn header-btn-new" type="button">
+                                            <a class="nav-link" href="sights-page.html">ღირსშესანიშნაობები</a>
+                                        </button>
+                                        <button type="button"
+                                            class="btn btn-sm  btn-secondary dropdown-toggle dropdown-toggle-split"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <span class="sr-only">Toggle Dropdown</span>
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="sights-page.html">ეკლესია-მონასტრები</a>
+                                            <a class="dropdown-item" href="sights-page.html">მთის კურორტები</a>
+                                            <a class=" dropdown-item" href="sights-page.html">ზღვის კურორტები</a>
+                                            <a class="dropdown-item" href="sights-page.html">ნაკრძალები</a>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                             <form class="form-inline my-2 my-lg-0">
@@ -65,7 +99,6 @@
                             </form>
                         </div>
                     </nav>
-
                 </div>
             </div>
             <div class="clear-box"></div>
@@ -310,11 +343,28 @@
                                 </article>
                             </div>
                         </div>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="clear-box"></div>
+                    </section>
                 </div>
-                </section>
-            </div>
 
-            <div class="clear-box"></div>
+                <div class="clear-box"></div>
         </main>
 
 
