--- a/AboutGeorgia/sights-konkretulad.html
+++ b/AboutGeorgia/sights-konkretulad.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="src/styles/main.css">
-    <link rel="stylesheet" href="src/styles/common/kerzi-konkretulad.css">
+    <link rel="stylesheet" href="src/styles/common/sights-konkretulad.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -118,8 +118,8 @@
         <main>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="image-container"><img src="./assets/img/food/ბორანო.PNG" alt="">
-
+                    <div class="image-container">
+                        <img src="./assets/img/advanture/gareji-2.jpg" alt="">
                     </div>
 
 
@@ -128,11 +128,15 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="description">
-                        <h1>ბორანო</h1>
-                        <p>ბორანო ტრადიციული აჭარული სამზარეულოს შემადგენელი კერძია. ტრადიციული ფორმით,
-                            ბორანო – ესაა იაღში ჩალბობილი ყველი. ის მაღალი კალორიულობით ხასიათდება და ზუსტად
-                            შეესაბამება აჭარელი კაცის ტრადიციული ცხოვრების წესს, რომელიც მუდმივ შრომასა და დიდ
-                            ფიზიკურ დატვირთვას მოითხოვს. მომზადებისას გამოიყენება იაღი, აჭარული მარილიანი კარაქი.</p>
+                        <h1>დავით გარეჯი</h1>
+                        <p>დავით გარეჯის კლდეში ნაკვეთი სამონასტრო კომპლექსი მდებარეობს გარე კახეთში. იგი გადაჭიმულია
+                            გარეჯის მთის ნახევრად უდაბურ კალთებზე 25 კილომეტრის მანძილზე და დღესაც ანცვიფრებს მნახველს
+                            სამშენებლო ხელოვნებისა და ფერწერის მაღალი მხატვრული ღირებულებით.
+
+                            მონასტერი VI საუკუნეში დააარსა 13 ასურელ მამათაგან ერთ-ერთმა - წმინდა დავით გარეჯელმა. წმიდა
+                            დავითი გარეჯის მთის ბუნებრივ გამოქვაბულში დასახლდა და აქ შექმნა პირველი მონასტერი, რომელსაც
+                            დღეს წმიდა დავითის ლავრა ეწოდება.
+                        </p>
                     </div>
 
 
