--- a/AboutGeorgia/sights-page.html
+++ b/AboutGeorgia/sights-page.html
@@ -274,11 +274,11 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6">
                                 <article>
-                                    <div class="image-container"><a href="#"><img
+                                    <div class="image-container"><a href="sights-konkretulad.html"><img
                                                 src="./assets/img/advanture/gareji.jpg" alt=""></a>
                                     </div>
                                     <div class="title-text">
-                                        <h3><a href="#">დავით-გარეჯი</a></h3>
+                                        <h3><a href="sights-konkretulad.html">დავით-გარეჯი</a></h3>
                                         <i class="fas fa-map-marker-alt"></i>
                                         <p>კახეთი</p>
                                     </div>
