--- a/AboutGeorgia/admin/home-page.html
+++ b/AboutGeorgia/admin/home-page.html
@@ -7,8 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>admin-panel</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../lib/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="src-admin/main-admin.css">
-  <link rel="stylesheet" href="src-admin/main-admin.css">
+  <link rel="stylesheet" href="src-admin/home-page.css">
   <script type="text/javascript">
     function togglemenu() {
       document.getElementById('saidebar').classList.toggle('active');
@@ -23,71 +22,37 @@
 <body>
 
   <header>
-    <img src="../assets/img/global/logo.png">
-    <div class="clear-box"></div>
+    <div class="container">
+      <img src="../assets/img/global/logo.png">
+    </div>
   </header>
-
-  <main>
-    <aside>
-      <div class="container">
-        <div id="accordion">
-          <div class="card">
-            <div class="card-header">
-              <a class="card-link" data-toggle="collapse" href="home-page.html">
-                <a href="home-page.html"> მთავარი</a>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-header">
-            <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-              კატეგორიები
-            </a>
-          </div>
-          <div id="collapseTwo" class="collapse show" data-parent="#accordion">
-            <div class="card-body">
-              <ul class="nav flex-column">
-
-                <li class="nav-item">
-                  <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="sights.html">ღირსშესანიშნაობები</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">ახალი კატეგორიის დამატება</a>
-                </li>
-
+  <div class="container-fluid">
+    <main>
+      <div class="row">
+        <div class="col-3">
+          <aside>
+            <div id="saidebar" onclick="togglemenu()">
+              <div class="toggle-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <ul>
+                <li><a href="#">მთავარი</a> </li>
+                <li><a href="categories-page.html">კატეგორიები</a> </li>
+                <li> <a href="#">პარამეტრები</a> </li>
               </ul>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header">
-              <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-                Collapsible Group Item #3
-              </a>
-            </div>
-            <div id="collapseThree" class="collapse" data-parent="#accordion">
-              <!--<div class="card-body">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                      </div>-->
-            </div>
-          </div>
+        </div>
+        </aside>
+        <div class="col-9">
+          <section>dddadadadaaaaaafsf</section>
+          <div class="clear-box"></div>
         </div>
       </div>
+  </div>
+  <div class="clear-box"></div>
 
-      <div class="clear-box"></div>
-    </aside>
-    <section>
-
-    </section>
-
-
-
-
-    </div>
   </main>
 
 
